src/tests/routes/trustpub/github_configs/snapshots/integration__routes__trustpub__github_configs__list__happy_path-4.snap
---
source: src/tests/routes/trustpub/github_configs/list.rs
expression: response.json()
---
{
  "github_configs": [
    {
      "crate": "bar",
      "created_at": "[datetime]",
      "environment": null,
      "id": 3,
      "repository_name": "BAR",
      "repository_owner": "rust-lang",
      "repository_owner_id": 42,
      "workflow_filename": "publish.yml"
    }
  ],
  "meta": {
    "next_page": null,
    "total": 1
  }
}
