src/tests/routes/trustpub/github_configs/snapshots/integration__routes__trustpub__github_configs__list__pagination-8.snap
---
source: src/tests/routes/trustpub/github_configs/list.rs
expression: json
---
{
  "github_configs": [],
  "meta": {
    "next_page": null,
    "total": 15
  }
}
