src/tests/routes/trustpub/github_configs/snapshots/integration__routes__trustpub__github_configs__list__token_auth_with_trusted_publishing_scope-2.snap
---
source: src/tests/routes/trustpub/github_configs/list.rs
expression: response.json()
---
{
  "github_configs": [
    {
      "crate": "foo",
      "created_at": "[datetime]",
      "environment": null,
      "id": 1,
      "repository_name": "foo-rs",
      "repository_owner": "rust-lang",
      "repository_owner_id": 42,
      "workflow_filename": "publish.yml"
    }
  ],
  "meta": {
    "next_page": null,
    "total": 1
  }
}
